// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert should return result 1`] = `
Object {
  "upsertSectionMedia": Object {
    "copyright": "new media copyright",
    "description": "new media description",
    "id": "717b3058-28f0-11e8-b467-0ed5f89f718b",
    "kind": "photo",
    "resolution": Array [
      1920,
      1080,
    ],
    "size": 0,
    "url": "717b3058-28f0-11e8-b467-0ed5f89f718b",
    "weight": 0,
  },
}
`;

exports[`update should return result 1`] = `
Object {
  "upsertSectionMedia": Object {
    "copyright": "new media copyright",
    "description": "new media description",
    "kind": "photo",
    "resolution": Array [
      1920,
      1080,
    ],
    "size": 0,
    "url": "717b3058-28f0-11e8-b467-0ed5f89f718b",
    "weight": 0,
  },
}
`;
